force-app/main/default/objects/Account/fields/tc9_et__Total_Temp_To_Perm_Fee_Not_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Temp_To_Perm_Fee_Not_Invoiced__c</fullName>
    <description>The balance of the Total Temp To Perm Fee Scheduled less Total Temp To Perm Fee Invoiced. Denotes any outstanding scheduled Temp To Perm Fee that still needs to be invoiced for the Client</description>
    <formula>tc9_et__Total_Temp_To_Perm_Fee_Scheduled__c - tc9_et__Total_Temp_To_Perm_Fee_Invoiced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The balance of the Total Temp To Perm Fee Scheduled less Total Temp To Perm Fee Invoiced. Denotes any outstanding scheduled Temp To Perm Fee that still needs to be invoiced for the Client</inlineHelpText>
    <label>Total Temp To Perm Fee Not Invoiced</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>