force-app/main/default/objects/Account/fields/tc9_et__Total_Temp_To_Perm_Fee_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Total_Temp_To_Perm_Fee_Scheduled__c</fullName>
    <description>The sum total of all related Invoiceable Fees with a record type of Temp To Perm Fee</description>
    <inlineHelpText>The sum total of all related Invoiceable Fees with a record type of Temp To Perm Fee</inlineHelpText>
    <label>Total Temp To Perm Fee Scheduled</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>