force-app/main/default/objects/Account/fields/tc9_pr__ABN__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ABN__c</fullName>
    <label>ABN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>