force-app/main/default/objects/Account/fields/tc9_pr__ABN_Lookup__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ABN_Lookup__c</fullName>
    <description>View this ABN in the Australian Business Register ABN lookup site.</description>
    <formula>If ( tc9_pr__ABN__c != null , HYPERLINK( $Label.tc9_pr__AU_ABN_Lookup + SUBSTITUTE ( tc9_pr__ABN__c , &apos; &apos; , &apos;&apos; ), &apos;ABN Lookup&apos; , &apos;_blank&apos;) , &apos;No ABN Provided&apos; )</formula>
    <inlineHelpText>View this ABN in the Australian Business Register ABN lookup site.</inlineHelpText>
    <label>ABN Lookup</label>
    <type>Text</type>
</CustomField>