force-app/main/default/objects/Account/fields/tc9_pr__Employee_Community__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Employee_Community__c</fullName>
    <description>Defines the Employee Community that will be used by Employees related to the Payment Entity via their Primary Payee. This value is used in auto creating Community User records</description>
    <inlineHelpText>Defines the Employee Community that will be used by Employees related to the Payment Entity via their Primary Payee. This value is used in auto creating Community User records</inlineHelpText>
    <label>Employee Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Employee_Community</valueSetName>
    </valueSet>
</CustomField>