force-app/main/default/objects/Account/fields/tc9_pr__Include_PAYG_in_Payment_Files__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Include_PAYG_in_Payment_Files__c</fullName>
    <description>Indicates that the PAYG total value from a Pay Batch will be included in a separate line in the Payment File, which has a record type of Australia Bank Transfer.</description>
    <inlineHelpText>Indicates that the PAYG total value from a Pay Batch will be included in a separate line in the Payment File, which has a record type of Australia Bank Transfer.</inlineHelpText>
    <label>Include PAYG in Payment Files?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>