force-app/main/default/objects/Account/fields/tc9_pr__Leave_Notification_Setting_Override__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Leave_Notification_Setting_Override__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines the notification setting which will be used for Leave Notifications when an Assignment is related to the Client. If blank the Leave Notification Setting defined on the Pay Schedule related to the Assignment will be applied.</description>
    <inlineHelpText>Defines the notification setting which will be used for Leave Notifications when an Assignment is related to the Client. If blank the Leave Notification Setting defined on the Pay Schedule related to the Assignment will be applied.</inlineHelpText>
    <label>Leave Notification Setting Override</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>tc9_pr__Notification_Setting__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Leave</value>
        </filterItems>
        <infoMessage>The Leave Notification Setting Override defined on the Client must have a record type of &apos;Leave&apos;</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>tc9_pr__Notification_Setting__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>