force-app/main/default/objects/Account/fields/tc9_pr__Maximum_Payment_Distributions__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Maximum_Payment_Distributions__c</fullName>
    <description>The maximum number of payment distributions allowed per Payee for the Payment Entity. A global maximum of 5 applies.</description>
    <inlineHelpText>The maximum number of payment distributions allowed per Payee for the Payment Entity. A global maximum of 5 applies.</inlineHelpText>
    <label>Maximum Payment Distributions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>8</label>
            </value>
            <value>
                <fullName>9</fullName>
                <isActive>false</isActive>
                <label>9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>