force-app/main/default/objects/Account/fields/tc9_pr__PAYG_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYG_Bank_Account_Name__c</fullName>
    <description>The Account Name of the bank account that your PAYG payment should be made to.</description>
    <inlineHelpText>The Account Name of the bank account that your PAYG payment should be made to.</inlineHelpText>
    <label>PAYG Bank Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>