force-app/main/default/objects/Account/fields/tc9_pr__PAYG_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYG_Bank_Account_Number__c</fullName>
    <description>The Account Number of the bank account that your PAYG payment should be made to.</description>
    <inlineHelpText>The Account Number of the bank account that your PAYG payment should be made to.</inlineHelpText>
    <label>PAYG Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>