force-app/main/default/objects/Account/fields/tc9_pr__PAYG_Bank_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYG_Bank_Branch_Code__c</fullName>
    <description>The Branch Code (BSB) of the bank account that your PAYG payment should be made to.</description>
    <inlineHelpText>The Branch Code (BSB) of the bank account that your PAYG payment should be made to.</inlineHelpText>
    <label>PAYG Bank Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>