force-app/main/default/objects/Account/fields/tc9_pr__PAYG_Payment_Reference_Number_PRN__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYG_Payment_Reference_Number_PRN__c</fullName>
    <description>The Payment Reference you wish to include on the PAYG line of your payment file. This will usually be the PRN issued to you by the ATO.</description>
    <inlineHelpText>The Payment Reference you wish to include on the PAYG line of your payment file. This will usually be the PRN issued to you by the ATO.</inlineHelpText>
    <label>PAYG Payment Reference Number (PRN)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>