force-app/main/default/objects/Account/fields/tc9_pr__Payment_Details_Complete__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payment_Details_Complete__c</fullName>
    <label>Payment Details Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>