force-app/main/default/objects/Account/fields/tc9_pr__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__SLAExpirationDate__c</fullName>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>