force-app/main/default/objects/Account/fields/tc9_pr__Withholding_Payer_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Withholding_Payer_Number__c</fullName>
    <description>ATO Withholding Payer Number for inclusion in STP communication</description>
    <inlineHelpText>ATO Withholding Payer Number for inclusion in STP communication</inlineHelpText>
    <label>Withholding Payer Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>