force-app/main/default/objects/Account/recordTypes/tc9_et__Client.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Client</fullName>
    <active>true</active>
    <description>To be used to define Client Accounts</description>
    <label>Client</label>
</RecordType>