force-app/main/default/objects/Account/recordTypes/tc9_et__Invoice_Entity.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Invoice_Entity</fullName>
    <active>true</active>
    <description>To be used to define Invoice Entities</description>
    <label>Invoice Entity</label>
</RecordType>