force-app/main/default/objects/Account/recordTypes/tc9_pr__Payment_Entity.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payment_Entity</fullName>
    <active>true</active>
    <description>To be used to define Payment Entities</description>
    <label>Payment Entity</label>
</RecordType>