force-app/main/default/objects/Account/listViews/tc9_et__Invoice_Entity.listView-meta.xml
<ListView>
    <fullName>tc9_et__Invoice_Entity</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>tc9_et__Default_Invoice_Schedule__c</columns>
    <columns>tc9_et__Default_Invoice_Taxable__c</columns>
    <columns>tc9_et__Send_Invoice_Emails_From_Email__c</columns>
    <columns>tc9_et__Contact_for_Invoice_Queries__c</columns>
    <columns>tc9_et__Invoice_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.tc9_et__Invoice_Entity</value>
    </filters>
    <label>Invoice Entity</label>
</ListView>