force-app/main/default/objects/Account/listViews/tc9_pr__AllAccounts.listView-meta.xml
<ListView>
    <fullName>tc9_pr__AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>tc9_pr__Schedule__c</columns>
    <columns>tc9_pr__ABN__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>